@@ -1,3 +1,5 @@
+2006/4/6 -- released version 20060406_trunk
+
 2006/4/5 -- released version 20060405_trunk
 
 2006/4/4 -- released version 20060404_trunk
